--- a/index.html
+++ b/index.html
@@ -258,6 +258,23 @@
 </div>
 
 <script>
+document.getElementById('featureForm').addEventListener('submit', function(e) {
+  e.preventDefault();
+  const form = e.target;
+  fetch(form.action, {
+    method: form.method,
+    body: new FormData(form),
+    headers: { 'Accept': 'application/json' }
+  }).then(() => {
+    form.reset();
+    document.getElementById('featureHint').textContent = '✅ Thanks for your feedback!';
+  }).catch(() => {
+    document.getElementById('featureHint').textContent = '⚠️ Something went wrong. Please try again.';
+  });
+});
+</script>
+
+<script>
   // Basic nav toggle
   const navBtn = document.querySelector('.nav-toggle');
   const nav = document.getElementById('nav');
